[gd_scene load_steps=10 format=3 uid="uid://d1bofl0tu3d0q"]

[ext_resource type="Script" path="res://scripts/movel_3d.gd" id="1_b30a2"]
[ext_resource type="Texture2D" uid="uid://b6s3y746pxtx2" path="res://assets/sprites/GUI/Menu/arrowSilver_right.png" id="2_u4u05"]
[ext_resource type="PackedScene" uid="uid://cfbjw1xeoy34f" path="res://assets/models/tableRound.glb" id="3_ctp5a"]
[ext_resource type="Texture2D" uid="uid://ctus02ptq3v50" path="res://assets/sprites/GUI/Menu/iconCheck_grey.png" id="4_e0dse"]
[ext_resource type="FontFile" uid="uid://dgr7ev4mi17td" path="res://fonts/WendyOne-Regular.ttf" id="5_7684l"]
[ext_resource type="AudioStream" uid="uid://lhbgn1jwohkl" path="res://assets/audios/sfx/arrastando.wav" id="6_750qf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kbp8e"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7exnb"]
size = Vector3(0.5, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_y72pq"]
size = Vector3(1, 1, 0.5)

[node name="MesaDeCentro" type="StaticBody3D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_b30a2")

[node name="MovelBody" type="Node3D" parent="."]

[node name="DirectionIndication" type="Sprite3D" parent="MovelBody"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -0.00147708, 0.0511377, -0.328671)
visible = false
texture = ExtResource("2_u4u05")

[node name="tableRound" parent="MovelBody" instance=ExtResource("3_ctp5a")]
transform = Transform3D(-1.05, 0, -9.17939e-08, 0, 1.05, 0, 9.17939e-08, 0, -1.05, 0.360512, 0.290736, -0.383771)

[node name="DoneChecker" type="Sprite3D" parent="MovelBody"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.14356, 0)
visible = false
modulate = Color(0.4, 1, 0, 1)
billboard = 1
texture = ExtResource("4_e0dse")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0103035, 0.493108, 0.0485635)
shape = SubResource("BoxShape3D_kbp8e")

[node name="FaceNorth" type="Area3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.178317, 0, -1.16669)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="FaceNorth"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.199026, 0.493108, -0.22279)
shape = SubResource("BoxShape3D_7exnb")

[node name="FaceSouth" type="Area3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.178318, 0, 0.833312)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="FaceSouth"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.199026, 0.493108, -0.22279)
shape = SubResource("BoxShape3D_7exnb")

[node name="FaceWest" type="Area3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.821682, 0, -0.166688)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="FaceWest"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.199026, 0.493108, -0.22279)
shape = SubResource("BoxShape3D_y72pq")

[node name="FaceEast" type="Area3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.17832, 0, -0.166688)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="FaceEast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.199026, 0.493108, -0.22279)
shape = SubResource("BoxShape3D_y72pq")

[node name="CellName" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00166368, 1.34482, 0.0752242)
visible = false
billboard = 1
text = "A1"
font = ExtResource("5_7684l")

[node name="ArrastandoAudio" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_750qf")

[connection signal="body_entered" from="FaceNorth" to="." method="_on_face_north_body_entered" flags=18]
[connection signal="body_exited" from="FaceNorth" to="." method="_on_face_body_exited" flags=18]
[connection signal="body_entered" from="FaceSouth" to="." method="_on_face_south_body_entered" flags=18]
[connection signal="body_exited" from="FaceSouth" to="." method="_on_face_body_exited" flags=18]
[connection signal="body_entered" from="FaceWest" to="." method="_on_face_west_body_entered" flags=18]
[connection signal="body_exited" from="FaceWest" to="." method="_on_face_body_exited" flags=18]
[connection signal="body_entered" from="FaceEast" to="." method="_on_face_east_body_entered" flags=18]
[connection signal="body_exited" from="FaceEast" to="." method="_on_face_body_exited" flags=18]
